--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="android.geosvr.dtn" android:versionCode="1"
 	android:versionName="4.0">
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="11"  />
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="11"  />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.UPDATE_DEVICE_STATS"></uses-permission>
@@ -38,9 +38,15 @@
 		<activity android:name=".apps.DTNApps" android:label="DTNApps">
 
 		</activity>
+		
+		<activity 
+		    android:name="android.geosvr.dtn.apps.DTNSelectArea"
+		    android:label="SelectArea"
+		    ></activity>
+		
 		<service android:name="DTNService" android:label="DTNService"></service>
 
-		<service android:name=".applications.ProcessPayload"
+		<service android:name="android.geosvr.dtn.applications.ProcessPayload"
 			android:label="ProcessPayload">
 			<intent-filter>
 				<action
@@ -48,7 +54,7 @@
 			</intent-filter>
 		</service>
 
-		<receiver android:name=".applications.PayloadReceiver">
+		<receiver android:name="android.geosvr.dtn.applications.PayloadReceiver">
 			<intent-filter>
 				<category android:name="android.intent.category.LAUNCHER" />
 				<action android:name="android.geosvr.dtn.action.SEND_BUNDLE" />
